--- a/v0/css/custom.css
+++ b/v0/css/custom.css
@@ -141,8 +141,8 @@ margin-left: -8px;
   max-width: 125px;
 }
 .body{
-background-image: none
-margin-top:-50px
+background-image: none;
+margin-top: -50px;
 }
 .col-xs-12 {
   width: 23%;
