--- a/v0/css/custom.css
+++ b/v0/css/custom.css
@@ -159,6 +159,10 @@ font-size:13px;
 	margin-top:50px;
 	width:100%;
 }
+.printfixt3{
+	margin-top:250px;
+	width:100%;
+}
 /*убираем ссылки при печати*/
 a:link:after, a:visited:after {  
 	display: none;
