--- a/v0/css/custom.css
+++ b/v0/css/custom.css
@@ -163,6 +163,9 @@ font-size:13px;
 	margin-top:350px;
 	width:100%;
 }
+.col-xs-12{
+  width: 33%;
+}
 /*убираем ссылки при печати*/
 a:link:after, a:visited:after {  
 	display: none;
