--- a/v0/css/custom.css
+++ b/v0/css/custom.css
@@ -165,6 +165,7 @@ font-size:13px;
 }
 .printfixt4{
   width: 33%;
+  float: left;
 }
 /*убираем ссылки при печати*/
 a:link:after, a:visited:after {  
