--- a/v0/css/custom.css
+++ b/v0/css/custom.css
@@ -166,6 +166,8 @@ font-size:13px;
 .printfixt4{
   width: 33%;
   float: left;
+  padding: 15px;
+
 }
 /*убираем ссылки при печати*/
 a:link:after, a:visited:after {  
